Corrige validaciones e integracion del modulo de resenias